<resources>
    <string name="app_name">Notifications For GO</string>
    <string name="app_name_plus">More for GO</string>

    <string name="share_command">Share command</string>
    <string name="how_to">How do I do that?</string>
    <string name="share_command_title">Share the command to send it to your PC or a nerdy friend</string>
    <string name="root_workaround_desc">If your device isn\'t rooted, you can manually grant the required permission by executing the following ADB command from your PC (the command is one line)  \'adb shell pm grant com.tomer.poke.notifier android.permission.WRITE_SECURE_SETTINGS\'  Once you have done that, the app should work properly.</string>
    <string name="root_workaround_notifications_desc">If your device isn\'t rooted, you can manually grant the required permission by executing the following ADB command from your PC (the command is one line)  \'adb shell pm grant com.tomer.poke.notifier android.permission.READ_LOGS\'  Once you have done that, the app should work properly.</string>
    <string name="root_workaround">Non-root workaround</string>
    <string name="required_step">One step required</string>
    <string name="required_step_desc">This app needs a special permission to read system logs. If you don\'t have root, choose \'Root workaround\' to get instructions on how to enable non-root method.</string>
    <string name="adb_command">adb shell pm grant com.tomer.poke.notifier android.permission.READ_LOGS</string>
    <string name="shortcut_label">Pokemon GO with notifications</string>
    <string name="create_shortcut">Create a shortcut</string>
    <string name="status_inactive">Notifications for GO service is inactive</string>
    <string name="status_active">Notifications for GO service is active</string>
    <string name="main_desc">Notifications for GO will send you notifications about new Pokémon nearby while the Pokémon GO app is opened. To use this app you must be rooted or manually grant READ_LOGS permission for the app.\n\nYou won\'t receive notifications while \'INCENSE\' is active</string>
    <string name="hi">Hi!</string>
    <string name="support_development">Support the development</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_desc">Configure and manage notifications</string>
    <string name="settings_notifications_sound">Notification sound</string>
    <string name="settings_notifications_sound_desc">Play a sound on notification</string>
    <string name="settings_notification_sound_file">Notification Ringtone</string>
    <string name="settings_notification_sound_file_desc">Pick a custom notification ringtone</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="menu_feedback">Feedback</string>




    <!--Actions-->
    <string name="action_support_the_development">Support the development</string>
    <!--Dialog and messages-->
    <string name="requires_support">Supporters only</string>
    <string name="requires_support_desc">This feature is for supporters only, please consider making a small donation to unlock this feature and motivate me to work on the app :)</string>
    <string name="plus_adb_command">adb shell pm grant com.tomer.poke.notifier android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="thank_you">Thank you for your donation :)</string>
    <!--Menu-->
    <string name="menu_change_team">Change team</string>
    <string name="menu_about">About</string>
    <!--Intro-->
    <string name="intro_choose_your_team">Choose your team</string>
    <string name="mystic_team">MYSTIC</string>
    <string name="valor_team">VALOR</string>
    <string name="instinct_team">INSTINCT</string>
    <string name="intro_skip">Skip</string>
    <!--Warnings-->
    <string name="warning_1_root">Your device must be rooted to use this feature</string>
    <!--Settings Category-->
    <string name="settings_battery_save">Battery saving</string>
    <string name="settings_enhancements">Enhancements</string>
    <string name="settings_other">Other</string>
    <string name="settings_general">General</string>
    <string name="settings_about">About</string>
    <!--Settings Titles-->
    <string name="settings_overlay">Overlay screen</string>
    <string name="settings_dim">Dim screen</string>
    <string name="settings_proximity_sensor">Proximity sensor</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_battery_saver">Battery saver</string>
    <string name="settings_kill_background_processes">Kill background processes</string>
    <string name="settings_extreme_battery_saver">Extreme battery saver</string>
    <string name="settings_maximize_brightness">Maximize brightness</string>
    <string name="settings_persistent_notification">Persistent notification</string>
    <string name="settings_floating_menu">Floating menu</string>
    <string name="settings_translate">Translate</string>
    <!--Settings Descriptions-->
    <string name="settings_overlay_desc">Click the first option in the floating menu to show a black view over the screen to save battery and disable touches. Recommended for devices with AMOLED screens. Hide the overlay by double tapping the screen.</string>
    <string name="settings_dim_desc">Dim screen when overlay is active</string>
    <string name="settings_proximity_sensor_desc">Use the proximity sensor to detect if overlay will be shown</string>
    <string name="settings_keep_screen_on_desc">Keep the screen on while you are playing the game</string>
    <string name="settings_battery_saver_desc">Start battery saver automatically when the game starts (requires root)</string>
    <string name="settings_kill_background_processes_desc">Kill background processes when the game is launched to save battery and improve the apps performance (Recommended for devices with less than 2GB of ram)</string>
    <string name="settings_extreme_battery_saver_desc">Make the display monochrome and set the location mode to battery saving to reduce battery consumption. Very recommended for AMOLED devices.</string>
    <string name="settings_maximize_brightness_desc">Maximize the screen brightness when the game start for better outdoor visibility</string>
    <string name="settings_floating_menu_desc">Show a floating menu to toggle overlay and access handy links</string>
    <string name="settings_screen_off_proximity_desc">Turn off the display when you put the device in your pocket or cover the proximity sensor to save battery. (only for Android 5.0+)</string>
    <string name="settings_screen_off_proximity">Auto pocket mode</string>
    <string name="settings_floating_menu_position">Floating menu position</string>
    <string name="settings_floating_menu_position_desc">Choose where you want the floating menu to appear on the screen</string>
    <string name="settings_persistent_notification_desc">Show a persistent notification to keep the app running in background</string>
    <string name="settings_translate_desc">Help translating the app to your language</string>
    <string name="more">More for GO</string>
    <string name="settings_persistent_fabs">Floating menu items</string>
    <string name="settings_persistent_fabs_desc">Choose buttons to show up in the floating menu</string>

    <string-array name="fab_position">
        <item>Top left</item>
        <item>Center left</item>
        <item>Center right</item>
    </string-array>
    <string-array name="fab_position_vals">
        <item>51</item>
        <item>19</item>
        <item>21</item>
    </string-array>
</resources>
