<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tomer.poke.notifier.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/hi"
        android:textColor="@android:color/white"
        android:textSize="72sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center_horizontal"
        android:text="@string/main_desc"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:text="@string/status_inactive" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/master_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6">

    </LinearLayout>

    <Button
        android:id="@+id/create_shortcut"
        android:text="@string/create_shortcut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/support"
        android:text="@string/support_development"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
