<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_weight="3.6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="3.1"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:text="@string/intro_choose_your_team" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_mystic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimaryBlue">

            <TextView
                android:id="@+id/title_blue"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mystic_team"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/team_text_size"
                android:typeface="monospace" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_valor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimaryRed">

            <TextView
                android:id="@+id/title_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/valor_team"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/team_text_size"
                android:typeface="monospace" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_instinct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimaryYellow">

            <TextView
                android:id="@+id/title_yellow"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/instinct_team"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/team_text_size"
                android:typeface="monospace" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="0.3">

        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textColor="#009688"
            android:text="@string/intro_skip"
            android:textAllCaps="true"
            android:theme="@style/AppTheme.FlatButton" />
    </RelativeLayout>

</LinearLayout>
